small menu changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a class="a-5" href="">SUBSCRIBE</a>
             </nav>
             <div class="nav-btn">
-                <a href="">UNREAL UNEARTH</a>
+                <a href="">MHER: THE MUSIC</a>
             </div>
             <div class="social-terms">
                 <a href="">COOKIES</a>
@@ -50,7 +50,7 @@
                 <a href="">PRIVACY</a>
                 <a href="">SAFE SEARCH GUIDE</a>
                 <a href="">© FILLIANAIRE RECORDS 2025</a>
-                <a href="">SITE BY TRISTAN PALMER STUDIO</a>
+                <a href="">SITE BY FLAMINKO MARKETING</a>
             </div>
         </div>
         
